          Ochoa. 
        - SpringHost were created without context, causing some NPE
          when trying to access client dispatchers. Reported by 
          Alexei Sokolov.
        - Fixed potential ClassCastException with 
          ReadableRepresentation when used with a non selectable
          channel. Reported by Rob Heittman. 
    - Misc
        - Removed deprecated code in GWT module not need for a first 
          release.
        - Added initial support for HTTP challenges in GWT module.
          Suggested by Gabor Dolla. Help from Rasmus Agerholm.
        - Updated db4o to version 7.4.58.
        - Updated FreeMarker to version 2.3.14.
        - Updated JAX-RS API to version 0.11.
        - Updated GWT to version 1.5.2 (final).
        
- 1.1 Release candidate 1 (08/20/2008)
    - Breaking change
        - The logger names used by Restlet have been fully refactored 
          to allow use more predictable names, to facilitate logging
          configuration, filtering, etc. See the wiki for details:
          http://wiki.restlet.org/docs_1.1/g1/13-restlet/29-restlet/98-restlet/101-restlet.html
    - Bugs fixed
        - Fixed NPE with WadlApplications that host Restlet subclasses.
          Reported by François Renard.
        - Removed all 'volatile' declaration in the Restlet-GWT module
          to prevent compilation issues. Reported by Nitin Gupta and
          fixed by Rob Heittman.
        - Fixed NPE occuring in JaxbRepresentation due to recent usage
          of representation's character set.
        - Fixed NPE in HttpRequest when using a Server instance without
          context. Reported by Bruno Dumon.
        - Fixed NPE in WadlApplication. Reported by Vincent Ricard.
        - Fixed blockings in internal HTTP connectors while processing
          requests. Reported by Zsolt Czinkos.
        - Refactored the ImmutableDate class since comparison operations
          ("after", etc) may fail. Reported by Mike Brzozowski.